--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
             <input type="text" id="itemInput">
             <ul id="itemUl"></ul>
         </div>
+        <div><p id="build"></p></div>
     </body>
 </html>
