--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
             <input type="text" id="itemInput">
             <ul id="itemUl"></ul>
         </div>
-        <div><p id="build"></p></div>
+        <div><p id="buildNr"></p></div>
     </body>
 </html>
